codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_task_list_toggle.snap
---
source: tui/src/keymap_setup.rs
expression: task_list_row
---
› Global         Toggle Task List           alt-p
